<resources>
    <string name="app_name">TrulyIASAssignment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_here">Login Here</string>
    <string name="heading">Student - Sign Up</string>
    <string name="don_t_have_an_account">have an account?</string>
    <string name="which_class_do_you_study">Which class do you study?</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="actionbarColor">#674fa3</string>
    <string name="sign_up_herelogin">Sign Up here</string>
</resources>