<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Loginactivity">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/backgroudview">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="24dp">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heading"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/idname"
                android:background="@drawable/custom_editext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:inputType="text"
                android:hint="@string/name"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_email"
                android:background="@drawable/custom_editext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/enter_your_email"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_password"
                android:background="@drawable/custom_editext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"/>




            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/idClass"
                android:background="@drawable/custom_editext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/which_class_do_you_study"
                android:drawableStart="@drawable/classicon"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/register"
                android:id="@+id/login_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginRedirectTextL"
                    android:text="@string/sign_up_here"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"/>



            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>




</LinearLayout>